<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:background="#fff">

    <ImageView
        android:id="@+id/iv_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/point" />

    <RelativeLayout
        android:id="@+id/monitor_menu"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_menu"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/menu_item_margin_left"
            android:layout_marginLeft="@dimen/menu_item_margin_left"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:text="@string/monitor_mode"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_item_text_size" />

        <Switch
            android:id="@+id/switch_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/menu_item_margin_left"
            android:layout_marginLeft="@dimen/menu_item_margin_left"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:layout_toEndOf="@+id/tv_monitor"
            android:layout_toRightOf="@+id/tv_monitor"
            android:checked="false"
            android:switchMinWidth="@dimen/switch_min_width"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_heat_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_monitor"
            android:layout_marginStart="@dimen/menu_item_margin_left"
            android:layout_marginLeft="@dimen/menu_item_margin_left"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:text="@string/contrast_mode"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_item_text_size" />

        <Switch
            android:id="@+id/switch_heat_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_monitor"
            android:layout_alignStart="@+id/switch_monitor"
            android:layout_alignLeft="@+id/switch_monitor"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:layout_toEndOf="@+id/tv_heat_map"
            android:layout_toRightOf="@+id/tv_heat_map"
            android:checked="false"
            android:switchMinWidth="@dimen/switch_min_width"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_heat_map_charts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_heat_map"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:text="@string/contrast_charts"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_item_text_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_define_page_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_heat_map_charts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:text="@string/define_page_events"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_item_text_size" />

        <TextView
            android:id="@+id/tv_done_select_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_define_page_events"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_item_text_size" />

        <TextView
            android:id="@+id/close_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_done_select_event"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/menu_item_space_between"
            android:text="@string/close_menu"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_item_text_size" />

    </RelativeLayout>
</merge>