<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/c_7ABAD7">

        <TextView
            android:id="@+id/statistics_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/back"
            android:textSize="@dimen/title_lv3_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/c_F1F1F1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_show_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/compare_analyse_list" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/c_D3D3D3" />

        <Button
            android:id="@+id/btn_show_chart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/compare_analyse_chart" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statistics_chart_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c_47A0C8"
            android:gravity="center"
            android:text="@string/click_percent_pie_label"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.chinapex.android.monitor.view.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp" />

            <com.chinapex.android.monitor.view.charts.PieForm
                android:id="@+id/pie_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c_47A0C8"
            android:gravity="center"
            android:text="@string/click_percent_pie_label"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/lv_count_rank"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statistics_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_clear_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:text="@string/clean_statistics_list"
            android:textColor="@color/c_548FA8" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/statistics_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />
    </LinearLayout>
</LinearLayout>